--- a/app/globals.css
+++ b/app/globals.css
@@ -3,24 +3,55 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+
+  --red-shade-45:#E50000;
+  --red-shade-50:#FF0000;
+  --red-shade-55:#FF1919;
+  --red-shade-60:#FF3333;
+  --red-shade-80:#FF9999;
+  --red-shade-90:#FFCCCC;
+  --red-shade-95:#FFE5E5;
+  --red-shade-99:#FFFAFA;
+
+  --black-shade-06:#0F0F0F;
+  --black-shade-08:#141414;
+  --black-shade-10:#1A1A1A;
+  --black-shade-12:#1F1F1F;
+  --black-shade-15:#262626;
+  --black-shade-20:#333333;
+  --black-shade-25:#404040;
+  --black-shade-30:#4C4C4C;
+
+
+  --grey-shade-60:#999999;
+  --grey-shade-65:#A6A6A6;
+  --grey-shade-70:#B3B3B3;
+  --grey-shade-75:#BFBFBF;
+  --grey-shade-90:#E4E4E7;
+  --grey-shade-95:#F1F1F3;
+  --grey-shade-97:#F7F7F8;
+  --grey-shade-99:#FCFCFD;
+
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-manrope: var(--font-manrope);
+  
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
+    
   }
 }
 
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-manrope);
+  
 }
